--- a/package.json
+++ b/package.json
@@ -8,17 +8,27 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.2.1",
+    "@googlemaps/js-api-loader": "^1.12.1",
     "@next/bundle-analyzer": "^9.1.4",
     "antd": "4.3.0",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.2",
     "dayjs": "1.8.28",
+    "embla-carousel": "^4.5.3",
     "esm": "^3.2.25",
+    "leaflet": "^1.7.1",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
+    "rc-banner-anim": "^2.4.5",
+    "rc-tween-one": "^2.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.1",
+    "react-map-gl": "^6.1.16",
+    "react-multi-carousel": "^2.6.3",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "ua-parser-js": "^0.7.28"
   },
   "browser": {
     "fs": false,
