--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-map-gl": "^6.1.16",
+    "react-messenger-message-us": "^0.1.0",
     "react-multi-carousel": "^2.6.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
